Fix vertical alignment of company name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ main {
   font-variation-settings: 'opsz' 72, 'SOFT' 50, 'WONK' 1;
   letter-spacing: -0.02em;
   line-height: 1.1;
+  margin: 0;
 }
 
 /* Links section - 2 column layout */
